Step 3: Header added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
 
 <body>
     <div class="main-container">
-        <header></header>
+        <header>
+            <img class="booki" src="./images/logo/Booki.png" alt="Logo Booki">
+            <nav>
+                <a href="#" class="nav-title">Hébergements</a>
+                <a href="#" class="nav-title">Activités</a>
+            </nav>
+        </header>
         <main>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
