gitignore added ans step 4 Form added

--- a/index.html
+++ b/index.html
@@ -24,6 +24,27 @@
             </nav>
         </header>
         <main>
+            <section class="info">
+                <div class="headline">
+                    <p class="section-title">Trouvez votre hébergement pour des vacances de rêve</p>
+                    <p class="link-footer">En plein centre ville ou en pleine nature</p>
+                </div>
+                <div class="search-bar">
+                    <div class="search-left">
+                        <img src="./images/vectors/vector-local.svg" alt="un pointeur de localisation" class="local-svg"/>
+                    </div>
+                    <div class="container-form">
+                        <form method="get" action="">
+                            <input type="search" id="city-search-id" name="city" placeholder="Marseille, France">
+                        </form>
+                    </div>
+                    <button id="button-search-right-id" class="button-search-right" >Rechercher</button>
+                    <button id="button-search-right-mini-id" class="button-search-right-mini">
+                        <img src="./images/vectors/vector-glass.svg" alt="une loupe blanche" />
+                    </button>
+                </div>
+                <div class="filter"></div>
+            </section>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
 
