OC_P2 Part 4 Search Form

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="search-bar">
                     <div class="search-left">
-                        <img src="./images/vectors/vector-local.svg" alt="un pointeur de localisation" class="local-svg"/>
+                        <i class="resize-18 fa-solid fa-location-dot" style="color: black;"></i>
                     </div>
                     <div class="container-form">
                         <form method="get" action="">
@@ -40,11 +40,39 @@
                     </div>
                     <button id="button-search-right-id" class="button-search-right" >Rechercher</button>
                     <button id="button-search-right-mini-id" class="button-search-right-mini">
-                        <img src="./images/vectors/vector-glass.svg" alt="une loupe blanche" />
+                        <i class="fa-lg fa-solid fa-magnifying-glass" style="color: white;"></i>
                     </button>
                 </div>
-                <div class="filter"></div>
+                <div class="filters">
+                    <div class="filter-container">
+                        <h3>Filtres</h3>
+                        <button id="button-bill-id" class="button-filter">
+                            <i class="fa-lg fa-solid fa-money-bill-wave" style="color: #7B61FF;"></i>&Eacute;conomique
+                        </button>
+                        <button id="button-person-id" class="button-filter">
+                            <i class="fa-lg fa-solid fa-person" style="color: #7B61FF;"></i>Familial
+                        </button>
+                        <button id="button-heart-id" class="button-filter">
+                            <i class="fa-lg fa-solid fa-heart" style="color: #7B61FF;"></i>Romantique
+                        </button> 
+                        <button id="button-fire-id" class="button-filter">
+                            <i class="fa-lg fa-solid fa-fire" style="color: #7B61FF;"></i>Nos pépites
+                        </button>  
+                    </div>                                     
+                </div>
+                <div class="info-bar">
+                    <div class="info-left">
+                        <i class="fa-xs fa-solid fa-info" style="color: #7B61FF;"></i>
+                    </div>
+                    <p class="link-footer">Plus de 500 logements sont disponibles dans cette ville</p>
+                </div>
             </section>
+ 
+ 
+ 
+ 
+ 
+ 
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
 
