refactor index.html and style.css

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <main>
             <section class="info">
                 <div class="headline">
-                    <p class="section-title">Trouvez votre hébergement pour des vacances de rêve</p>
+                    <h2 class="section-title">Trouvez votre hébergement pour des vacances de rêve</h2>
                     <p class="link-footer">En plein centre ville ou en pleine nature</p>
                 </div>
                 <div class="search-bar">
                     <div class="search-left">
-                        <i class="resize-18 fa-solid fa-location-dot" style="color: black;"></i>
+                        <i class="resize-18 fa-solid fa-location-dot" style="color: black;" aria-hidden="true"></i>
                     </div>
                     <div class="container-form">
                         <form method="get" action="">
@@ -40,29 +40,29 @@
                     </div>
                     <button id="button-search-right-id" class="button-search-right" >Rechercher</button>
                     <button id="button-search-right-mini-id" class="button-search-right-mini">
-                        <i class="fa-lg fa-solid fa-magnifying-glass" style="color: white;"></i>
+                        <i class="fa-lg fa-solid fa-magnifying-glass" style="color: white;" aria-hidden="true"></i>
                     </button>
                 </div>
                 <div class="filters">
                     <div class="filter-container">
                         <h3>Filtres</h3>
                         <button id="button-bill-id" class="button-filter">
-                            <i class="fa-lg fa-solid fa-money-bill-wave" style="color: #7B61FF;"></i>&Eacute;conomique
+                            <i class="fa-lg fas fa-money-bill-wave" aria-hidden="true"></i>&Eacute;conomique
                         </button>
                         <button id="button-person-id" class="button-filter">
-                            <i class="fa-lg fa-solid fa-person" style="color: #7B61FF;"></i>Familial
+                            <i class="fa-lg fas fa-person" aria-hidden="true"></i>Familial
                         </button>
                         <button id="button-heart-id" class="button-filter">
-                            <i class="fa-lg fa-solid fa-heart" style="color: #7B61FF;"></i>Romantique
+                            <i class="fa-lg fas fa-heart" aria-hidden="true"></i>Romantique
                         </button> 
                         <button id="button-fire-id" class="button-filter">
-                            <i class="fa-lg fa-solid fa-fire" style="color: #7B61FF;"></i>Nos pépites
+                            <i class="fa-lg fas fa-fire" aria-hidden="true"></i>Nos pépites
                         </button>  
                     </div>                                     
                 </div>
                 <div class="info-bar">
                     <div class="info-left">
-                        <i class="fa-xs fa-solid fa-info" style="color: #7B61FF;"></i>
+                        <i class="fa-xs fas fa-info"></i>
                     </div>
                     <p class="link-footer">Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
@@ -75,12 +75,13 @@
  
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
+                    <h2 class="section-title">Hébergements à Marseille</h2>
 
                 </section>
                 <section class="populaires">
                     <div class="populaires-title">
                         <h2 class="section-title">Les plus populaires</h2>
-                        <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
+                        <i class="fas fa-chart-line" aria-hidden="true"></i>
                     </div>
                     <div class="populaires-cards">
                         <a href="#">
@@ -92,11 +93,11 @@
                                         <p class="card-subtitle">Nuit à partir de 128<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fas fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
@@ -111,11 +112,11 @@
                                         <p class="card-subtitle">Nuit à partir de 71<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fas fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
@@ -130,11 +131,11 @@
                                         <p class="card-subtitle">Nuit à partir de 68<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fas fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
