Hébergements cards part 1

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="search-bar">
                     <div class="search-left">
-                        <i class="resize-18 fa-solid fa-location-dot" style="color: black;" aria-hidden="true"></i>
+                        <i class="resize-18 color-black fa-solid fa-location-dot" aria-hidden="true"></i>
                     </div>
                     <div class="container-form">
                         <form method="get" action="">
@@ -40,29 +40,29 @@
                     </div>
                     <button id="button-search-right-id" class="button-search-right" >Rechercher</button>
                     <button id="button-search-right-mini-id" class="button-search-right-mini">
-                        <i class="fa-lg fa-solid fa-magnifying-glass" style="color: white;" aria-hidden="true"></i>
+                        <i class="fa-lg fa-solid fa-magnifying-glass color-white" aria-hidden="true"></i>
                     </button>
                 </div>
                 <div class="filters">
                     <div class="filter-container">
                         <h3>Filtres</h3>
                         <button id="button-bill-id" class="button-filter">
-                            <i class="fa-lg fas fa-money-bill-wave" aria-hidden="true"></i>&Eacute;conomique
+                            <i class="fa-lg color-main fa-solid fa-money-bill-wave" aria-hidden="true"></i>&Eacute;conomique
                         </button>
                         <button id="button-person-id" class="button-filter">
-                            <i class="fa-lg fas fa-person" aria-hidden="true"></i>Familial
+                            <i class="fa-lg color-main fa-solid fa-person" aria-hidden="true"></i>Familial
                         </button>
                         <button id="button-heart-id" class="button-filter">
-                            <i class="fa-lg fas fa-heart" aria-hidden="true"></i>Romantique
+                            <i class="fa-lg color-main fa-solid fa-heart" aria-hidden="true"></i>Romantique
                         </button> 
                         <button id="button-fire-id" class="button-filter">
-                            <i class="fa-lg fas fa-fire" aria-hidden="true"></i>Nos pépites
+                            <i class="fa-lg color-main fa-solid fa-fire" aria-hidden="true"></i>Nos pépites
                         </button>  
                     </div>                                     
                 </div>
                 <div class="info-bar">
                     <div class="info-left">
-                        <i class="fa-xs fas fa-info"></i>
+                        <i class="fa-xs color-main fa-info"></i>
                     </div>
                     <p class="link-footer">Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
@@ -75,13 +75,128 @@
  
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
-                    <h2 class="section-title">Hébergements à Marseille</h2>
+                    <h2 class="section-title title-bottom-30">Hébergements à Marseille</h2>
 
+                    <div class="hebergements-cards">
+                        <a href="#">
+                            <article class="card">
+                                <img src="./images/hebergements/fred-kleber.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Hôtel du port</h3>
+                                        <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
+                                    </div>
+                                    <div class="card-rating">
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </a>
+                        <a href="#">
+                            <article class="card">
+                                <img src="./images/hebergements/febrian-zakaria.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Hôtel chez Amina</h3>
+                                        <p class="card-subtitle">Nuit à partir de 96<span class="euro">€</span></p>
+                                    </div>
+                                    <div class="card-rating">
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </a>
+                        <a href="#">
+                            <article class="card">
+                                <img src="./images/hebergements/reisetopia.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Hôtel Les Mouettes</h3>
+                                        <p class="card-subtitle">Nuit à partir de 76<span class="euro">€</span></p>
+                                    </div>
+                                    <div class="card-rating">
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </a>
+                        <a href="#">
+                            <article class="card">
+                                <img src="./images/hebergements/annie-spratt.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Hôtel de la mer</h3>
+                                        <p class="card-subtitle">Nuit à partir de 46<span class="euro">€</span></p>
+                                    </div>
+                                    <div class="card-rating">
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </a>
+                        <a href="#">
+                            <article class="card">
+                                <img src="./images/hebergements/marcus-loke.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Auberge de la Canebière</h3>
+                                        <p class="card-subtitle">Nuit à partir de 25<span class="euro">€</span></p>
+                                    </div>
+                                    <div class="card-rating">
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </a>
+                        <a href="#">
+                            <article class="card">
+                                <img src="./images/hebergements/nicate-lee.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Auberge le Panier</h3>
+                                        <p class="card-subtitle">Nuit à partir de 23<span class="euro">€</span></p>
+                                    </div>
+                                    <div class="card-rating">
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </a>                                                
                 </section>
                 <section class="populaires">
                     <div class="populaires-title">
                         <h2 class="section-title">Les plus populaires</h2>
-                        <i class="fas fa-chart-line" aria-hidden="true"></i>
+                        <i class="resize-18 color-main fa-solid fa-chart-line" aria-hidden="true"></i>
                     </div>
                     <div class="populaires-cards">
                         <a href="#">
@@ -90,14 +205,14 @@
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">Hôtel Le soleil du matin</h3>
-                                        <p class="card-subtitle">Nuit à partir de 128<span class="euro">€</span></p>
+                                        <p class="card-subtitle">Nuit à partir de 25<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fas fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
@@ -112,11 +227,11 @@
                                         <p class="card-subtitle">Nuit à partir de 71<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fas fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
@@ -131,11 +246,11 @@
                                         <p class="card-subtitle">Nuit à partir de 68<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fas fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fas fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
