--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="info-bar">
                     <div class="info-left">
-                        <i class="fa-xs color-main fa-info"></i>
+                        <i class="fa-xs fa-solid color-main fa-info"></i>
                     </div>
                     <p class="link-footer">Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
@@ -76,16 +76,15 @@
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
                     <h2 class="section-title title-bottom-30">Hébergements à Marseille</h2>
-
                     <div class="hebergements-cards">
                         <a href="#">
                             <article class="card">
                                 <img src="./images/hebergements/fred-kleber.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
-                                    <div class="card-txt">
-                                        <h3 class="card-title">Hôtel du port</h3>
-                                        <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
-                                    </div>
+
+                                        <div class="card-title">Hôtel du port</div>
+                                        <div class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></div>
+
                                     <div class="card-rating">
                                         <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
@@ -101,10 +100,10 @@
                             <article class="card">
                                 <img src="./images/hebergements/febrian-zakaria.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
-                                    <div class="card-txt">
-                                        <h3 class="card-title">Hôtel chez Amina</h3>
-                                        <p class="card-subtitle">Nuit à partir de 96<span class="euro">€</span></p>
-                                    </div>
+
+                                        <div class="card-title">Hôtel chez Amina</div>
+                                        <div class="card-subtitle">Nuit à partir de 96<span class="euro">€</span></div>
+
                                     <div class="card-rating">
                                         <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
@@ -120,10 +119,10 @@
                             <article class="card">
                                 <img src="./images/hebergements/reisetopia.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
-                                    <div class="card-txt">
-                                        <h3 class="card-title">Hôtel Les Mouettes</h3>
-                                        <p class="card-subtitle">Nuit à partir de 76<span class="euro">€</span></p>
-                                    </div>
+
+                                        <div class="card-title">Hôtel Les Mouettes</div>
+                                        <div class="card-subtitle">Nuit à partir de 76<span class="euro">€</span></div>
+
                                     <div class="card-rating">
                                         <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
@@ -139,10 +138,10 @@
                             <article class="card">
                                 <img src="./images/hebergements/annie-spratt.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
-                                    <div class="card-txt">
-                                        <h3 class="card-title">Hôtel de la mer</h3>
-                                        <p class="card-subtitle">Nuit à partir de 46<span class="euro">€</span></p>
-                                    </div>
+
+                                        <div class="card-title">Hôtel de la mer</div>
+                                        <div class="card-subtitle">Nuit à partir de 46<span class="euro">€</span></div>
+
                                     <div class="card-rating">
                                         <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
@@ -158,10 +157,10 @@
                             <article class="card">
                                 <img src="./images/hebergements/marcus-loke.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
-                                    <div class="card-txt">
-                                        <h3 class="card-title">Auberge de la Canebière</h3>
-                                        <p class="card-subtitle">Nuit à partir de 25<span class="euro">€</span></p>
-                                    </div>
+
+                                        <div class="card-title">Auberge de la Canebière</div>
+                                        <div class="card-subtitle">Nuit à partir de 25<span class="euro">€</span></div>
+
                                     <div class="card-rating">
                                         <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
@@ -177,10 +176,10 @@
                             <article class="card">
                                 <img src="./images/hebergements/nicate-lee.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
-                                    <div class="card-txt">
-                                        <h3 class="card-title">Auberge le Panier</h3>
-                                        <p class="card-subtitle">Nuit à partir de 23<span class="euro">€</span></p>
-                                    </div>
+
+                                        <div class="card-title">Auberge le Panier</div>
+                                        <div class="card-subtitle">Nuit à partir de 23<span class="euro">€</span></div>
+
                                     <div class="card-rating">
                                         <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
@@ -191,8 +190,11 @@
                                     </div>
                                 </div>
                             </article>
-                        </a>                                                
+                        </a> 
+                    </div>
+                    <a href="#" class="hebergements-footer">Afficher plus</a>                                             
                 </section>
+
                 <section class="populaires">
                     <div class="populaires-title">
                         <h2 class="section-title">Les plus populaires</h2>
