--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
                                 <img src="./images/hebergements/fred-kleber.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
 
-                                        <div class="card-title">Hôtel du port</div>
-                                        <div class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></div>
+                                        <h3 class="card-title">Hôtel du port</h3>
+                                        <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
 
                                     <div class="card-rating">
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
@@ -105,11 +105,11 @@
                                         <div class="card-subtitle">Nuit à partir de 96<span class="euro">€</span></div>
 
                                     <div class="card-rating">
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
@@ -124,11 +124,11 @@
                                         <div class="card-subtitle">Nuit à partir de 76<span class="euro">€</span></div>
 
                                     <div class="card-rating">
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
@@ -143,11 +143,11 @@
                                         <div class="card-subtitle">Nuit à partir de 46<span class="euro">€</span></div>
 
                                     <div class="card-rating">
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
@@ -162,11 +162,11 @@
                                         <div class="card-subtitle">Nuit à partir de 25<span class="euro">€</span></div>
 
                                     <div class="card-rating">
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
@@ -181,11 +181,11 @@
                                         <div class="card-subtitle">Nuit à partir de 23<span class="euro">€</span></div>
 
                                     <div class="card-rating">
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
@@ -210,11 +210,11 @@
                                         <p class="card-subtitle">Nuit à partir de 25<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
@@ -229,11 +229,11 @@
                                         <p class="card-subtitle">Nuit à partir de 71<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
@@ -248,11 +248,11 @@
                                         <p class="card-subtitle">Nuit à partir de 68<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
