activities and footer implemented

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <main>
             <section class="info">
                 <div class="headline">
-                    <h2 class="section-title">Trouvez votre hébergement pour des vacances de rêve</h2>
-                    <p class="link-footer">En plein centre ville ou en pleine nature</p>
+                    <h1 class="section-title">Trouvez votre hébergement pour des vacances de rêve</h1>
+                    <h5 class="link-footer">En plein centre ville ou en pleine nature</h5>
                 </div>
                 <div class="search-bar">
                     <div class="search-left">
@@ -44,21 +44,19 @@
                     </button>
                 </div>
                 <div class="filters">
-                    <div class="filter-container">
-                        <h3>Filtres</h3>
-                        <button id="button-bill-id" class="button-filter">
-                            <i class="fa-lg color-main fa-solid fa-money-bill-wave" aria-hidden="true"></i>&Eacute;conomique
-                        </button>
-                        <button id="button-person-id" class="button-filter">
-                            <i class="fa-lg color-main fa-solid fa-person" aria-hidden="true"></i>Familial
-                        </button>
-                        <button id="button-heart-id" class="button-filter">
-                            <i class="fa-lg color-main fa-solid fa-heart" aria-hidden="true"></i>Romantique
-                        </button> 
-                        <button id="button-fire-id" class="button-filter">
-                            <i class="fa-lg color-main fa-solid fa-fire" aria-hidden="true"></i>Nos pépites
-                        </button>  
-                    </div>                                     
+                    <h3>Filtres</h3>
+                    <button id="button-bill-id" class="button-filter">
+                        <i class="fa-lg color-main fa-solid fa-money-bill-wave" aria-hidden="true"></i>&Eacute;conomique
+                    </button>
+                    <button id="button-person-id" class="button-filter">
+                        <i class="fa-lg color-main fa-solid fa-person" aria-hidden="true"></i>Familial
+                    </button>
+                    <button id="button-heart-id" class="button-filter">
+                        <i class="fa-lg color-main fa-solid fa-heart" aria-hidden="true"></i>Romantique
+                    </button> 
+                    <button id="button-fire-id" class="button-filter">
+                        <i class="fa-lg color-main fa-solid fa-fire" aria-hidden="true"></i>Nos pépites
+                    </button>                             
                 </div>
                 <div class="info-bar">
                     <div class="info-left">
@@ -68,14 +66,9 @@
                 </div>
             </section>
  
- 
- 
- 
- 
- 
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
-                    <h2 class="section-title title-bottom-30">Hébergements à Marseille</h2>
+                    <h1>Hébergements à Marseille</h1>
                     <div class="hebergements-cards">
                         <a href="#">
                             <article class="card">
@@ -197,7 +190,7 @@
 
                 <section class="populaires">
                     <div class="populaires-title">
-                        <h2 class="section-title">Les plus populaires</h2>
+                        <h1>Les plus populaires</h1>
                         <i class="resize-18 color-main fa-solid fa-chart-line" aria-hidden="true"></i>
                     </div>
                     <div class="populaires-cards">
@@ -261,8 +254,61 @@
                     </div>
                 </section>
             </div>
+           
+            <section class="activities-all">
+                <h1>Activités à Marseille</h1>
+                <section class="activities">
+                    <div class="activities-cards">
+                        <a href="#">
+                            <article class="activity-card">
+                                <img src="./images/activites/reno-laithienne.jpg" alt="Image du Vieux-Port">
+                                <h3 class="activities-text">Vieux-Port</h3>
+                            </article>
+                        </a>
+                        <a href="#">
+                            <article class="activity-card">
+                                <img src="./images/activites/paul-hermann.jpg" alt="Image du Fort de Pomègues">
+                                <h3 class="activities-text">Fort de Pomègues</h3>
+                            </article>
+                        </a>
+                        <a href="#">
+                            <article class="activity-card">
+                                <img src="./images/activites/kilyan-sockalingum.jpg" alt="Image du Parc national des Calanques">
+                                <h3 class="activities-text">Parc national des Calanques</h3>
+                            </article>
+                        </a>
+                        <a href="#">
+                            <article class="activity-card">
+                                <img src="./images/activites/florian-wehde.jpg" alt="Image de Notre-Dame-De-La-Garde">
+                                <h3 class="activities-text">Notre-Dame-De-La-Garde</h3>
+                            </article>
+                        </a>                                                                        
+                    </div>
+                </section>
+
+            </section>
+
         </main>
-        <footer></footer>
+        <footer>
+            <div class="footer-container">
+                <div class="hebergements-footer">A propos</div>
+                <a href="#">Fonctionnement du site</a>
+                <a href="#">Conditions générales</a>
+                <a href="#">Données et confidenttialités</a>
+            </div>
+            <div class="footer-container">
+                <div class="hebergements-footer">Nos hébergements</div>
+                <a href="#">Charte qualité</a>
+                <a href="#">Proposer votre hôtel</a>
+            </div>
+            <div class="footer-container">
+                <div class="hebergements-footer">Assistance</div>
+                <a href="#">Fonctionnement du site</a>
+                <a href="#">Conditions générales</a>
+                <a href="#">Données et confidenttialités</a>
+            </div>               
+
+        </footer>
     </div>
 </body>
 
